ingress/aaosa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aaosa-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - aaosainternational.com
    secretName: aaosa-tls
  rules:
  - host: aaosainternational.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aaosa-service
            port:
              number: 80
